Fix spacing for navbar

--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,4 +1,5 @@
 .navbar {
+  padding: 0 15vw;
   background-color: var(--bg-color);
   display: flex;
   flex-direction: row;
